Add number and operator buttons. Add result screen

--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
 </head>
 <body>
     <h1>Calculator</h1>
+        <div>
+            <div id="screen-result">result</div>
+        </div>
+    <div id="buttons-layout">
+        <div id="number-buttons">
+            <button id="button-1">1</button>
+            <button id="button-2">2</button>
+            <button id="button-3">3</button>
+            <button id="button-4">4</button>
+            <button id="button-5">5</button>
+            <button id="button-6">6</button>
+            <button id="button-7">7</button>
+            <button id="button-8">8</button>
+            <button id="button-9">9</button>
+            <button id="button-0">0</button>
+        </div>
+        <div id="operator-buttons">
+            <button id="button-add">+</button>
+            <button id="button-sub">-</button>
+            <button id="button-mul">*</button>
+            <button id="button-div">/</button>
+        </div>
+    </div>
 </body>
 </html>
