--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         </div>
     <div id="buttons-layout">
         <div id="number-buttons">
-            <button id="button-1">1</button>
-            <button id="button-2">2</button>
-            <button id="button-3">3</button>
-            <button id="button-4">4</button>
-            <button id="button-5">5</button>
-            <button id="button-6">6</button>
-            <button id="button-7">7</button>
-            <button id="button-8">8</button>
-            <button id="button-9">9</button>
-            <button id="button-0">0</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>0</button>
         </div>
         <div id="operator-buttons">
-            <button id="button-add">+</button>
-            <button id="button-sub">-</button>
-            <button id="button-mul">*</button>
-            <button id="button-div">/</button>
+            <button>+</button>
+            <button>-</button>
+            <button>x</button>
+            <button>÷</button>
         </div>
     </div>
 </body>
