Combine get value functions to one functions
changed value variables to strings instead of arrays

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Calculator</h1>
         <div>
-            <div id="screen-result">result</div>
+            <div id="screen-result"></div>
         </div>
     <div id="buttons-layout">
         <div id="number-buttons">
