Add sum funcion and equal sign button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Calculator</h1>
         <div>
-            <div id="screen-result"></div>
+            <div id="screen"></div>
         </div>
     <div id="buttons-layout">
         <div id="number-buttons">
@@ -32,6 +32,7 @@
             <button>x</button>
             <button>÷</button>
         </div>
+        <button id="equal-button">=</button>
     </div>
 </body>
 </html>
