--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <h1>Calculator</h1>
         <div>
             <div id="screen"></div>
         </div>
     <div id="buttons-layout">
-        <div id="number-buttons">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>0</button>
-        </div>
-        <div id="operator-buttons">
-            <button>+</button>
-            <button>-</button>
-            <button>x</button>
-            <button>÷</button>
-        </div>
+        <button id="clear-button">C</button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button class="number-button">1</button>
+        <button class="number-button">2</button>
+        <button class="number-button">3</button>
+        <button class="operator-button">+</button>
+        <button class="number-button">4</button>
+        <button class="number-button">5</button>
+        <button class="number-button">6</button>
+        <button class="operator-button">-</button>
+        <button class="number-button">7</button>
+        <button class="number-button">8</button>
+        <button class="number-button">9</button>
+        <button class="operator-button">x</button>
+        <button class="number-button">.</button>
+        <button class="number-button">0</button>
         <button id="equal-button">=</button>
+        <button class="operator-button">÷</button>
     </div>
 </body>
 </html>
