Resize layout, change button and screen style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-        <div>
+        <div id="screen-frame">
             <div id="screen"></div>
         </div>
     <div id="buttons-layout">
