--- a/index.html
+++ b/index.html
@@ -7,35 +7,38 @@
 
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
+
 </head>
 <body>
+    <div id="calc-frame">
         <div id="screen-frame">
             <div id="screen"></div>
         </div>
-    <div id="buttons-layout">
-        <button class="number-button">7</button>
-        <button class="number-button">8</button>
-        <button class="number-button">9</button>
-        <span class="separator"></span>
-        <button id="backspace">←</button>
-        <button id="clear-button">C</button>
-        <button class="number-button">4</button>
-        <button class="number-button">5</button>
-        <button class="number-button">6</button>
-        <span class="separator"></span>
-        <button class="operator-button">-</button>
-        <button class="operator-button">÷</button>
-        <button class="number-button">1</button>
-        <button class="number-button">2</button>
-        <button class="number-button">3</button>
-        <span class="separator"></span>
-        <button class="operator-button">+</button>
-        <button class="operator-button">x</button>
-        <button class="number-button">.</button>
-        <button class="number-button">0</button>
-        <button id="plus-minus">+/-</button>
-        <span class="separator"></span>
-        <button id="equal-button">=</button>
+        <div id="buttons-layout">
+            <button class="number-button">7</button>
+            <button class="number-button">8</button>
+            <button class="number-button">9</button>
+            <span class="separator"></span>
+            <button id="backspace">←</button>
+            <button id="clear-button">C</button>
+            <button class="number-button">4</button>
+            <button class="number-button">5</button>
+            <button class="number-button">6</button>
+            <span class="separator"></span>
+            <button class="operator-button">-</button>
+            <button class="operator-button">÷</button>
+            <button class="number-button">1</button>
+            <button class="number-button">2</button>
+            <button class="number-button">3</button>
+            <span class="separator"></span>
+            <button class="operator-button">+</button>
+            <button class="operator-button">x</button>
+            <button class="number-button">.</button>
+            <button class="number-button">0</button>
+            <button id="plus-minus">+/-</button>
+            <span class="separator"></span>
+            <button id="equal-button">=</button>
+        </div>
     </div>
 </body>
 </html>
