Add calculator body and change buttons color
added "TOP CALCULATOR II" text to the body

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="screen-frame">
             <div id="screen"></div>
         </div>
+        <div id="message-text">TOP CALCULATOR II</div>
         <div id="buttons-layout">
             <button class="number-button">7</button>
             <button class="number-button">8</button>
