--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
 <body>
+    <div id="bg-graphic"></div>
     <div id="calc-frame">
         <div id="screen-frame">
             <div id="screen"></div>
