--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
 <body>
+    <div id="my-name">CREATED BY PABLO DE LUNA</div>
     <div id="calc-frame">
         <div id="screen-frame">
             <div id="screen"></div>
         </div>
-        <div id="message-text">TOP CALCULATOR II</div>
+        <div id="message-text">███ &nbsp TOP CALCULATOR II &nbsp ████████</div>
         <div id="buttons-layout">
             <button class="number-button">7</button>
             <button class="number-button">8</button>
