Change green lines to divs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <div id="screen-frame">
             <div id="screen"></div>
         </div>
-        <div id="message-text">███ &nbsp TOP CALCULATOR II &nbsp ████████</div>
+        <div id="message-design">
+            <div id="left-line"></div>
+            <div id="message-text">TOP CALCULATOR II</div>
+            <div id="right-line"></div>
+        </div>
         <div id="buttons-layout">
             <button class="number-button">7</button>
             <button class="number-button">8</button>
